# Progetto

./: Archeology.py  FunzioniProva.py  FunzioniStreamlit.py  PlanetFunctions.py  PlanetGraphs.py  README.md  emissioni.csv  main.py  pyproject.toml  telescopi.csv
