[project]
name = "progetto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "geodatasets>=2024.8.0",
    "geopandas>=1.0.1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pydeck>=0.9.1",
    "scikit-learn>=1.6.0",
    "streamlit>=1.41.0",
]
