[project]
name = "progetto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "plotly>=5.24.1",
    "pydeck>=0.9.1",
    "scikit-image>=0.25.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "streamlit>=1.41.0",
]
